--- a/Wetter/MainWindow.xaml
+++ b/Wetter/MainWindow.xaml
@@ -13,39 +13,38 @@
 
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="#FF0B102B"/>
-            <GradientStop Color="#FF0E1E79" Offset="1"/>
+            <GradientStop Color="#FF0B102B" Offset="1"/>
+            <GradientStop Color="#FF0E1E79"/>
+            <GradientStop Color="#FF0C1859" Offset="0.39"/>
+            <GradientStop Color="#FF190B39" Offset="0.807"/>
+            <GradientStop Color="#FF071B6D" Offset="0.163"/>
+            <GradientStop Color="#FE340C7D" Offset="0.067"/>
         </LinearGradientBrush>
     </Window.Background>
-
 
     <Grid>
         <Grid.Resources>
             <Style TargetType="Run" >
                 <Setter Property="Foreground" Value="White"/>
-
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding}" Value="{x:Null}">
                         <Setter Property="Foreground" Value="Red" />
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
-
-            <RelativeSource x:Key="Window" Mode="FindAncestor" AncestorType="{x:Type local:MainWindow}"/>
         </Grid.Resources>
 
         <TextBlock Margin="60,5,239,0" VerticalAlignment="Top" Foreground="White">
             Last Updated: 
             <Run Language="ch-DE" Text="NEVER" Name="LastUpdatedDisplay"
-                   FontSize="12" Foreground="White" />
+                   FontSize="12" />
         </TextBlock>
 
         <StackPanel Grid.ColumnSpan="2" >
             <TextBox KeyDown="CityInput_KeyDown" Height="29" HorizontalContentAlignment="Center" 
                      HorizontalAlignment="Right" VerticalAlignment="Top" Width="164" x:Name="LocationName"
                      FontSize="16" Grid.ColumnSpan="2" Foreground="White" BorderThickness="0,0,0,2"
-                     Background="{x:Null}" VerticalContentAlignment="Center" SelectionBrush="White"
-                     SelectionTextBrush="Black"/>
+                     Background="{x:Null}" VerticalContentAlignment="Center" SelectionBrush="White" SelectionTextBrush="Black" CaretBrush="#FFFF9337"/>
 
             <Label HorizontalAlignment="Right" HorizontalContentAlignment="Right" Height="29" VerticalAlignment="Top" Width="164" FontSize="16">
                 <Run Text="{Binding LastUpdated, Mode=OneTime, FallbackValue='Not Fetched'}" ToolTip="Date of weather info"/>
@@ -54,7 +53,6 @@
             <Label HorizontalContentAlignment="Right"  HorizontalAlignment="Right" Height="32" Width="164" Foreground="White" FontSize="16">
                 <Run Text="{Binding weather[0].description, Mode=OneWay, FallbackValue='No Data'}" d:Text="Weather Desc"/>
             </Label>
-
         </StackPanel>
 
         <TextBlock HorizontalAlignment="Left" Height="38" VerticalAlignment="Top" FontSize="25" Margin="46,30,0,0">
@@ -79,7 +77,7 @@
             Ground Level: <Run Text="{Binding main.grnd_level, FallbackValue='0m', StringFormat={}{0}m}"/><LineBreak/>
         </TextBlock>
 
-        <Label HorizontalAlignment="Left" Height="25" Width="60" Foreground="White" FontSize="12" VerticalAlignment="Top">
+        <Label HorizontalAlignment="Left" Height="25" Width="60" FontSize="12" VerticalAlignment="Top" BorderThickness="2,0,0,0">
             <Run Text="{Binding UTCTimezone,Mode=OneWay,  FallbackValue='No Data'}"/>
         </Label>
 
@@ -88,19 +86,18 @@
                Width="62" Name="Icon"
                RenderTransformOrigin="0.5,0.5"
                Source="{Binding Icon}">
-
         </Image>
 
         <Button Height="30" HorizontalAlignment="Right"
                 Padding="5" VerticalAlignment="Bottom"
                 Margin="10" Background="#3F000000"
                 Foreground="White" BorderBrush="White"
-                Click="Update_Click" Content="Update"/>
+                Click="Update_Click" Content="Update">
+        </Button>
 
         <TreeView Name="Tree" HorizontalAlignment="Left" 
                   Height="115" Margin="10,105,0,0" VerticalAlignment="Top"
-                  Width="251" Background="{x:Null}" Focusable="False" />
+                  Width="251" Background="{x:Null}" Focusable="False">
+        </TreeView>
     </Grid>
 </Window>
-
-    
