--- a/Wetter/MainWindow.xaml
+++ b/Wetter/MainWindow.xaml
@@ -9,8 +9,7 @@
         Height="300" Width="500"
 
         d:DataContext="{Binding DataSource, RelativeSource = {RelativeSource Mode=FindAncestor, AncestorType=local:MainWindow}}"
-        Title="{Binding City.name, StringFormat=Weather at {0}}" WindowStartupLocation="CenterScreen">
-
+        Title="{Binding City.Name, StringFormat=Weather at {0}}" WindowStartupLocation="CenterScreen">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="#FF0B102B" Offset="1"/>
@@ -22,7 +21,7 @@
         </LinearGradientBrush>
     </Window.Background>
 
-    <Grid>
+    <Grid x:Name="Root">
         <Grid.Resources>
             <Style TargetType="Run" >
                 <Setter Property="Foreground" Value="White"/>
@@ -34,33 +33,47 @@
             </Style>
         </Grid.Resources>
 
-        <TextBlock Margin="60,5,239,0" VerticalAlignment="Top" Foreground="White">
+        <Expander Panel.ZIndex="2" Margin="5,0,239,0">
+            <local:Picker ChangeView="ViewPick_ChangeView" x:Name="ViewPick" 
+                          HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,60,0,0" Height="180" Width="181"
+                          />
+        </Expander>
+
+        <TextBlock Margin="80,4,239,0" VerticalAlignment="Top" Foreground="White">
             Last Updated: 
             <Run Language="ch-DE" Text="NEVER" Name="LastUpdatedDisplay"
                    FontSize="12" />
         </TextBlock>
 
-        <StackPanel Grid.ColumnSpan="2" >
-            <TextBox KeyDown="CityInput_KeyDown" Height="29" HorizontalContentAlignment="Center" 
-                     HorizontalAlignment="Right" VerticalAlignment="Top" Width="164" x:Name="LocationName"
-                     FontSize="16" Grid.ColumnSpan="2" Foreground="White" BorderThickness="0,0,0,2"
-                     Background="{x:Null}" VerticalContentAlignment="Center" SelectionBrush="White" SelectionTextBrush="Black" CaretBrush="#FFFF9337"/>
+
+        <StackPanel>
+
+
+            <TextBox KeyDown="CityInput_KeyDown" Height="31"
+                     Width="164" x:Name="LocationName"
+                     FontSize="16" Foreground="White" BorderThickness="0,0,0,2"
+                     Background="{x:Null}"
+                     SelectionBrush="White" SelectionTextBrush="Black"
+                     CaretBrush="#FFFF9337" VerticalAlignment="Bottom" 
+                     HorizontalAlignment="Right" 
+                     HorizontalContentAlignment="Right" VerticalContentAlignment="Center"
+                     />
 
             <Label HorizontalAlignment="Right" HorizontalContentAlignment="Right" Height="29" VerticalAlignment="Top" Width="164" FontSize="16">
-                <Run Text="{Binding LastUpdated.TimeOfDay, Mode=OneTime, FallbackValue='Not Fetched'}" ToolTip="Date of weather info"/>
+                <Run Text="{Binding LastUpdated.TimeOfDay, FallbackValue=Not Fetched, Mode=OneTime}" ToolTip="Date of weather info"/>
             </Label>
 
             <Label HorizontalContentAlignment="Right"  HorizontalAlignment="Right" Height="32" Width="164" Foreground="White" FontSize="16">
-                <Run Text="{Binding Description, Mode=OneWay, FallbackValue='No Data'}" d:Text="Weather Desc"/>
+                <Run Text="{Binding Description, FallbackValue=No Data, Mode=OneWay}" d:Text="Weather Desc"/>
             </Label>
         </StackPanel>
 
-        <TextBlock HorizontalAlignment="Left" Height="38" VerticalAlignment="Top" FontSize="25" Margin="46,30,0,0">
+        <TextBlock HorizontalAlignment="Left" Height="38" VerticalAlignment="Top" FontSize="25" Margin="66,30,0,0">
             <Run Text="{Binding Main.Temp, FallbackValue='0°C', StringFormat={}{0}°C}"/>
             (<Run Text="{Binding Main.feels_like, Mode=OneTime, FallbackValue='0°', StringFormat={}{0}°C}" ToolTip="Feels like"/>)
         </TextBlock>
 
-        <TextBlock Margin="10,68,239,0">
+        <TextBlock Margin="10,68,239,10">
             Minimum Temperature : <Run Text="{Binding Main.temp_min, FallbackValue='0°', StringFormat={}{0}°}" /><LineBreak/>
             Maximum Temperature: <Run Text="{Binding Main.temp_max, FallbackValue='0°', StringFormat={}{0}°}"/><LineBreak/>
         </TextBlock>
@@ -77,7 +90,7 @@
             Ground Level: <Run Text="{Binding Main.grnd_level, FallbackValue='0m', StringFormat={}{0}m}"/><LineBreak/>
         </TextBlock>
 
-        <Label HorizontalAlignment="Left" Height="25" Width="60" FontSize="12" VerticalAlignment="Top" BorderThickness="2,0,0,0">
+        <Label HorizontalAlignment="Left" Height="25" Width="60" FontSize="12" VerticalAlignment="Top" BorderThickness="2,0,0,0" Margin="20,-1,0,0">
             <Run Text="{Binding UTCTimezone,Mode=OneWay,  FallbackValue='No Data'}"/>
         </Label>
 
@@ -96,13 +109,11 @@
         </Button>
 
         <TreeView Name="Tree" HorizontalAlignment="Left" 
-                  Height="115" Margin="10,105,0,0" VerticalAlignment="Top"
-                  Width="251" Background="{x:Null}" Focusable="False">
+                  Height="123" Margin="10,105,0,0" VerticalAlignment="Top"
+                  Width="255" Background="{x:Null}" Focusable="False"
+                  Visibility="Hidden">
         </TreeView>
 
-        <local:Picker Height="30" HorizontalAlignment="Right"
-                Padding="5" VerticalAlignment="Bottom"
-                Margin="0,0,80,10" Background="#3F000000"
-                Foreground="White" x:Name="ViewPicker"></local:Picker>
+
     </Grid>
 </Window>
